# CppCrossPlatformTests

./: .gitignore  Build.sh  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md  cpp.hint
App/: CMakeLists.txt  SampleApp.cpp
Catch2/: Catch.hpp
FakeIt/single_header/catch/: fakeit.hpp
SimpleMockExample/: SimpleExampleClass.h  SimpleExampleInterface.h  SimpleExampleSUT.h
TestExamples_BoostTest/: BoostTest_MockTests.cpp  BoostTest_SimpleTests.cpp  CMakeLists.txt  CmakeLists.txt
TestExamples_Catch/: CMakeLists.txt  CatchTest_MockTests.cpp  CatchTest_SimpleTests.cpp  CatchTests.runsettings
TestExamples_GoogleTest/: CMakeLists.txt  GoogleTest_FakeItMockTests.cpp  GoogleTest_MockTests.cpp  GoogleTest_SimpleTests.cpp  TestCase_01.cpp  TestCase_02.cpp
cmake/: add_tests_in_folder.cmake
